<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".activity_login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"

        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />


            <ImageView
                android:id="@+id/ivSignIn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/sign_in_text_on_registration_activity"
                android:src="@drawable/sign_in" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">


                <AutoCompleteTextView
                    android:id="@+id/emaillogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_person"
                    android:drawableLeft="@drawable/icon_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/emailReg"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="screen">

                <AutoCompleteTextView
                    android:id="@+id/passwordlogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableStart="@drawable/icon_password"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/passwordReg"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/loginprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone">

            </ProgressBar>


            <ImageView
                android:id="@+id/fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/fingerprint"
                android:visibility="gone" />

            <TextView
                android:id="@+id/msgtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/forgot_password"
                android:textColor="#78909C" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnsignin_gradient"
                android:text="@string/sign_inLog"
                android:textColor="#FFFFFF" />


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signup_redirect"
                android:textColor="#78909C" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>