<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context="com.example.finance.activity_registration">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />


            <ImageView
                android:id="@+id/ivJoinUs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO"
                android:src="@drawable/joinus_text" />


            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/usernameReg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_mail"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/white"
                app:passwordToggleTintMode="screen">


            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/confpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/registerprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignup_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/registersucess"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/green" />


            <TextView
                android:id="@+id/alrsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="@color/gray" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
